cart overflow fixed

--- a/style.css
+++ b/style.css
@@ -911,9 +911,7 @@ margin-bottom: 20px;
 
 /* Cart-page */
 
-#cart {
-  overflow-x: auto;
-}
+
 
 #cart table {
   width: 100%;
